blurry icon fix

--- a/tool/tool/assets/css/custom.css
+++ b/tool/tool/assets/css/custom.css
@@ -64,7 +64,7 @@ margin-left:-4px;
 text-align:center;
 display:block;
 
-width:100%;
+
 padding-left:4px;
 
 margin-right
